# cargo-rank

./: .gitattributes  .gitignore  .spelling  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  codecov.yml  constants.env  default_config.yml  deny.toml  foo.csv  foo.html  foo.json  foo.xlsx  rust-toolchain.toml  spellcheck.toml
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: main.yml  release.yml
cargo-aprz/: Cargo.toml
cargo-aprz-lib/: Cargo.toml  README.md  default_config.toml
cargo-aprz-lib/src/: lib.rs
cargo-aprz-lib/src/commands/: common.rs  config.rs  crates.rs  deps.rs  host.rs  init.rs  mod.rs  progress_reporter.rs  run.rs  validate.rs
cargo-aprz-lib/src/commands/snapshots/: cargo_aprz_lib__commands__validate__tests__expression_returning_non_boolean.snap  cargo_aprz_lib__commands__validate__tests__expression_with_nonexistent_metric.snap  cargo_aprz_lib__commands__validate__tests__expression_with_type_mismatch.snap  cargo_aprz_lib__commands__validate__tests__invalid_duration_format.snap  cargo_aprz_lib__commands__validate__tests__invalid_expression_syntax.snap  cargo_aprz_lib__commands__validate__tests__invalid_toml_syntax.snap  cargo_aprz_lib__commands__validate__tests__unknown_field.snap
cargo-aprz-lib/src/expr/: appraisal.rs  evaluation_outcome.rs  evaluator.rs  expression.rs  expression_outcome.rs  mod.rs
cargo-aprz-lib/src/facts/: cache.rs  cache_doc.rs  cache_lock.rs  collector.rs  crate_facts.rs  crate_ref.rs  crate_spec.rs  mod.rs  path_utils.rs  progress.rs  provider_result.rs  repo_spec.rs  request_tracker.rs  resilient_http.rs  throttler.rs
cargo-aprz-lib/src/facts/advisories/: advisory_data.rs  mod.rs  provider.rs
cargo-aprz-lib/src/facts/codebase/: codebase_data.rs  git.rs  github_workflow_analyzer.rs  mod.rs  provider.rs  source_file_analyzer.rs
cargo-aprz-lib/src/facts/coverage/: coverage_data.rs  provider.rs
cargo-aprz-lib/src/facts/crates/: crate_overall_data.rs  crate_version_data.rs  crates_data.rs  mod.rs  owner_kind.rs  provider.rs  rust_edition.rs
cargo-aprz-lib/src/facts/crates/tables/: categories_table.rs  crate_downloads_table.rs  crates_categories_table.rs  crates_keywords_table.rs  metadata_table.rs  mod.rs  row_reader.rs  row_writer.rs  table.rs  table_mgr.rs  teams_table.rs  versions_table.rs
cargo-aprz-lib/src/facts/docs/: calc_metrics.rs  docs_data.rs  mod.rs  provider.rs
cargo-aprz-lib/src/facts/hosting/: client.rs  hosting_data.rs  issue_stats.rs  mod.rs  provider.rs  time_window_stats.rs
cargo-aprz-lib/src/metrics/: metric.rs  metric_category.rs  metric_def.rs  metric_value.rs  mod.rs
cargo-aprz-lib/src/reports/: common.rs  console.rs  csv.rs  excel.rs  html.rs  json.rs  mod.rs  reportable_crate.rs
cargo-aprz-lib/src/reports/snapshots/: cargo_aprz_lib__reports__snapshot_tests__console_report_no_colors.snap  cargo_aprz_lib__reports__snapshot_tests__console_report_with_colors.snap  cargo_aprz_lib__reports__snapshot_tests__csv_report.snap  cargo_aprz_lib__reports__snapshot_tests__empty_crates_console.snap  cargo_aprz_lib__reports__snapshot_tests__empty_crates_csv.snap  cargo_aprz_lib__reports__snapshot_tests__empty_crates_json.snap  cargo_aprz_lib__reports__snapshot_tests__html_report.snap  cargo_aprz_lib__reports__snapshot_tests__json_report.snap  cargo_aprz_lib__reports__snapshot_tests__single_crate_console.snap  cargo_aprz_lib__reports__snapshot_tests__single_crate_csv.snap  cargo_aprz_lib__reports__snapshot_tests__single_crate_json.snap
cargo-aprz-lib/tests/: advisory_provider_integration.rs  config_expressions_test.rs  coverage_provider_integration.rs  crates_command_integration.rs  crates_provider_integration.rs  deps_command_integration.rs  docs_provider_integration.rs  validate_command_integration.rs
cargo-aprz-lib/tests/fixtures/: anyhow-1.0.100.json.zst
cargo-aprz-lib/tests/fixtures/tiny-crate/: Cargo.toml
cargo-aprz-lib/tests/fixtures/tiny-virtual-workspace/: Cargo.toml
cargo-aprz-lib/tests/fixtures/tiny-virtual-workspace/member/: Cargo.toml
cargo-aprz/src/: main.rs
src/: lib.rs  main.rs
src/commands/: common.rs  convert.rs  crates.rs  deps.rs  init.rs  mod.rs  validate.rs
src/config/: color.rs  config.rs  mod.rs  policy.rs
src/config/policies/: age_policy.rs  aged_count_policy.rs  boolean_policy.rs  license_policy.rs  max_count_policy.rs  min_count_policy.rs  mod.rs  percentage_policy.rs  responsiveness_policy.rs  version_policy.rs
src/facts/: cache_doc.rs  cache_lock.rs  collector.rs  crate_facts.rs  crate_ref.rs  crate_spec.rs  mod.rs  path_utils.rs  progress_reporter.rs  provider_result.rs  repo_spec.rs  request_tracker.rs
src/facts/advisories/: advisory_data.rs  mod.rs  provider.rs
src/facts/codebase/: codebase_data.rs  git.rs  github_workflow_analyzer.rs  provider.rs  source_file_analyzer.rs
src/facts/coverage/: mod.rs  provider.rs
src/facts/crates/: crate_overall_data.rs  crate_version_data.rs  mod.rs  owner.rs  owner_kind.rs  provider.rs
src/facts/crates/tables/: categories_table.rs  crate_owners_table.rs  crates_table.rs  default_versions_table.rs  dependencies_table.rs  ids.rs  keywords_table.rs  mod.rs  reserved_crate_names_table.rs  row_iter.rs  row_reader.rs  row_writer.rs  table.rs  table_mgr.rs  users_table.rs  version_downloads_table.rs  versions_table.rs
src/facts/docs/: calc_metrics.rs  docs_data.rs  provider.rs
src/facts/hosting/: age_stats.rs  client.rs  hosting_data.rs  issue_stats.rs  provider.rs
src/metrics/: metric.rs  metric_category.rs  mod.rs
src/misc/: color_mode.rs  dependency_type.rs  dependency_types.rs  mod.rs
src/ranking/: metric_calculator.rs  mod.rs  policy_outcome.rs  ranker.rs
src/reports/: console.rs  excel.rs  html.rs  mod.rs
