[package]
name = "cargo-rank"
version = "0.1.0"
edition = "2024"
description = "Ranks the quality of your dependencies"
license = "MIT"
repository = "https://github.com/geeknoid/cargo-rank"
homepage = "https://github.com/geeknoid/cargo-rank"
keywords = ["cargo", "cargo-plugin", "dependencies", "ranking"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.92"

[lib]
name = "cargo_rank"
path = "src/lib.rs"

[[bin]]
name = "cargo-rank"
path = "src/main.rs"

[dependencies]
ohno = { version = "0.2.1", default-features = false, features = ["app-err"] }
bytes = { version = "1.0", default-features = false }
camino = { version = "1.2.1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock", "std", "now"] }
clap = { version = "4.5.49", default-features = false, features = ["std", "derive", "color", "help", "error-context", "usage", "suggestions", "env", "wrap_help"] }
csv = { version = "1.2.2", default-features = false }
directories = { version = "6.0.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
flate2 = { version = "1.0.26", default-features = false, features = ["zlib-rs"] }
fs4 = { version = "0.13.1", default-features = false, features = ["sync"] }
futures = { version = "0.3.31"  , default-features = false }
futures-util = { version = "0.3", default-features = false }
indicatif = { version = "0.18.3", default-features = false }
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
log = { version = "0.4", default-features = false }
memmap2 = { version = "0.9", default-features = false }
octocrab = { version = "0.49.1", default-features = false, features = ["rustls", "default-client", "jwt-rust-crypto"] }
owo-colors = { version = "4.1", default-features = false }
palette = { version = "0.7.6", default-features = true, features = ["serializing"] }
paste = { version = "1.0", default-features = false }
ra_ap_syntax = { version = "0.0.312", default-features = false }
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust_xlsxwriter = { version = "0.92.2", default-features = false, features = ["zlib"] }
# Multiple rustdoc-types versions to support different docs.rs JSON format versions
# See calculate_docs_metrics() in src/facts/docs/provider.rs for version dispatching logic
# Versions 50-57 have explicit type-safe support; older versions use fallback parsing
rustdoc-types-v50 = { package = "rustdoc-types", version = "0.50.0", default-features = false }
rustdoc-types-v51 = { package = "rustdoc-types", version = "0.51.0", default-features = false }
rustdoc-types-v52 = { package = "rustdoc-types", version = "0.52.0", default-features = false }
rustdoc-types-v53 = { package = "rustdoc-types", version = "0.53.0", default-features = false }
rustdoc-types-v54 = { package = "rustdoc-types", version = "0.54.0", default-features = false }
rustdoc-types-v55 = { package = "rustdoc-types", version = "0.55.0", default-features = false }
rustdoc-types-v56 = { package = "rustdoc-types", version = "0.56.0", default-features = false }
rustdoc-types-v57 = { package = "rustdoc-types", version = "0.57.0", default-features = false }
rustsec = { version = "0.31", default-features = true }
semver = { version = "1.0.27", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.33", default-features = false }
spdx = { version = "0.13.2", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
tar = { version = "0.4.38", default-features = false }
terminal_size = { version = "0.4.1", default-features = false }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread", "sync", "process", "time"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde", "display"] }
toml_edit = { version = "0.23.9", default-features = false, features = ["serde", "display"] }
url = { version = "2.5.4", default-features = false }
vlen = { version = "0.3.0", default-features = false }
walkdir = { version = "2.5", default-features = false }
zstd = { version = "0.13", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", default-features = false, features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Security"] }

[build-dependencies]
ohno = { version = "0.2", default-features = false, features = ["app-err"] }
camino = { version = "1.2.1", default-features = false }
clap = { version = "4.5.49", default-features = false, features = ["std", "derive"] }
palette = { version = "0.7.6", default-features = true, features = ["serializing"] }
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
semver = { version = "1.0.27", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.33", default-features = false }
spdx = { version = "0.13.2", default-features = false }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde", "display"] }
toml_edit = { version = "0.23.9", default-features = false, features = ["serde", "display"] }

[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"

# Allow cfg attributes for coverage builds
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Explicitly enabled lints from the `restriction` group.
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
as_underscore = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
map_err_ignore = "warn"
missing_asserts_for_indexing = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
panic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
semicolon_outside_block = "warn"
std_instead_of_core = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

# Explicitly necessary
multiple_crate_versions = "allow"

# Not needed for a tool
missing-errors-doc = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
